// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List component size-small-default 1`] = `
.c4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
  font-size: 14px;
  line-height: 20px;
  padding: 6px 6px 6px 0;
}

.c0 {
  list-style: none;
  padding: 0;
  margin: 0;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.22);
  display: inline-block;
  box-sizing: border-box;
  background-color: rgba(255,255,255,1);
  color: #303030;
  min-width: 12.5rem;
}

.c2 {
  position: relative;
  padding-left: 8px;
  border-left: 2px solid transparent;
  outline: 0;
  margin-top: 8px;
  margin-bottom: 4px;
}

.c2:not(:first-child) {
  margin-top: 4px;
}

.c2:last-child {
  margin-bottom: 8px;
}

.c2:not(:last-child) .c3 {
  border-bottom: 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: top;
  -webkit-box-align: top;
  -ms-flex-align: top;
  align-items: top;
}

<ul
  class="c0"
>
  <li
    class="c1 c2"
    tabindex="0"
  >
    <div
      class="c3 c4"
    >
      hello
    </div>
  </li>
  <li
    class="c1 c2"
    tabindex="0"
  >
    <div
      class="c3 c4"
    >
      hello
    </div>
  </li>
  <li
    class="c1 c2"
    tabindex="0"
  >
    <div
      class="c3 c4"
    >
      hello
    </div>
  </li>
  <li
    class="c1 c2"
    tabindex="0"
  >
    <div
      class="c3 c4"
    >
      hello
    </div>
  </li>
</ul>
`;

exports[`List component size-small-with icon 1`] = `
.c5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
  font-size: 14px;
  line-height: 20px;
  padding: 6px 6px 6px 0;
}

.c0 {
  list-style: none;
  padding: 0;
  margin: 0;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.22);
  display: inline-block;
  box-sizing: border-box;
  background-color: rgba(255,255,255,1);
  color: #303030;
  min-width: 12.5rem;
}

.c2 {
  position: relative;
  padding-left: 8px;
  border-left: 2px solid transparent;
  outline: 0;
  margin-top: 8px;
  margin-bottom: 4px;
}

.c2:not(:first-child) {
  margin-top: 4px;
}

.c2:last-child {
  margin-bottom: 8px;
}

.c2:not(:last-child) .c4 {
  border-bottom: 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: top;
  -webkit-box-align: top;
  -ms-flex-align: top;
  align-items: top;
}

.c3 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  margin: 0 6px 0 0;
}

<ul
  class="c0"
>
  <li
    class="c1 c2"
    tabindex="0"
  >
    <div
      class="c3"
    >
      blah
    </div>
    <div
      class="c4 c5"
    />
  </li>
  <li
    class="c1 c2"
    tabindex="0"
  >
    <div
      class="c3"
    >
      blah
    </div>
    <div
      class="c4 c5"
    />
  </li>
  <li
    class="c1 c2"
    tabindex="0"
  >
    <div
      class="c3"
    >
      blah
    </div>
    <div
      class="c4 c5"
    />
  </li>
  <li
    class="c1 c2"
    tabindex="0"
  >
    <div
      class="c3"
    >
      blah
    </div>
    <div
      class="c4 c5"
    />
  </li>
</ul>
`;

exports[`List component size-undefined-default 1`] = `
.c4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
  font-size: 14px;
  line-height: 20px;
  padding: 12px 20px 12px 0;
}

.c0 {
  list-style: none;
  padding: 0;
  margin: 0;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.22);
  display: inline-block;
  box-sizing: border-box;
  background-color: rgba(255,255,255,1);
  color: #303030;
  min-width: 16rem;
}

.cjXrOH:not(:last-child) .c3 {
  border-bottom: 0;
}

.kkujht:not(:last-child) .c3 {
  border-bottom: 0;
}

.c2 {
  position: relative;
  padding-left: 8px;
  border-left: 2px solid transparent;
  outline: 0;
}

.c2:not(:last-child) .c3 {
  border-bottom: 1px solid #E8E8E8;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: top;
  -webkit-box-align: top;
  -ms-flex-align: top;
  align-items: top;
}

<ul
  class="c0"
>
  <li
    class="c1 c2"
    tabindex="0"
  >
    <div
      class="c3 c4"
    >
      hello
    </div>
  </li>
  <li
    class="c1 c2"
    tabindex="0"
  >
    <div
      class="c3 c4"
    >
      hello
    </div>
  </li>
  <li
    class="c1 c2"
    tabindex="0"
  >
    <div
      class="c3 c4"
    >
      hello
    </div>
  </li>
  <li
    class="c1 c2"
    tabindex="0"
  >
    <div
      class="c3 c4"
    >
      hello
    </div>
  </li>
</ul>
`;

exports[`List component size-undefined-with icon 1`] = `
.c5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
  font-size: 14px;
  line-height: 20px;
  padding: 12px 20px 12px 0;
}

.c0 {
  list-style: none;
  padding: 0;
  margin: 0;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.22);
  display: inline-block;
  box-sizing: border-box;
  background-color: rgba(255,255,255,1);
  color: #303030;
  min-width: 16rem;
}

.cjXrOH:not(:last-child) .c4 {
  border-bottom: 0;
}

.kkujht:not(:last-child) .c4 {
  border-bottom: 0;
}

.c2 {
  position: relative;
  padding-left: 8px;
  border-left: 2px solid transparent;
  outline: 0;
}

.c2:not(:last-child) .c4 {
  border-bottom: 1px solid #E8E8E8;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: top;
  -webkit-box-align: top;
  -ms-flex-align: top;
  align-items: top;
}

.c3 {
  margin-top: 12px;
  margin-right: 10px;
}

<ul
  class="c0"
>
  <li
    class="c1 c2"
    tabindex="0"
  >
    <div
      class="c3"
    >
      blah
    </div>
    <div
      class="c4 c5"
    />
  </li>
  <li
    class="c1 c2"
    tabindex="0"
  >
    <div
      class="c3"
    >
      blah
    </div>
    <div
      class="c4 c5"
    />
  </li>
  <li
    class="c1 c2"
    tabindex="0"
  >
    <div
      class="c3"
    >
      blah
    </div>
    <div
      class="c4 c5"
    />
  </li>
  <li
    class="c1 c2"
    tabindex="0"
  >
    <div
      class="c3"
    >
      blah
    </div>
    <div
      class="c4 c5"
    />
  </li>
</ul>
`;
